fix: prevent overscroll bounce on Safari (#1196)

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -158,6 +158,7 @@ body {
   height: 100%;
   width: 100%;
   overflow: auto;
+  overscroll-behavior: none;
 }
 
 @property --grid-color-start {
